feat: refactor API structure to use Vite with Hono, update dependencies, and add new renderer component

--- a/apps/api/wrangler.jsonc
+++ b/apps/api/wrangler.jsonc
@@ -1,5 +1,6 @@
 {
-  "name": "rekishi-api",
-  "main": "src/index.ts",
-  "compatibility_date": "2025-02-14"
+  "$schema": "node_modules/wrangler/config-schema.json",
+  "name": "api",
+  "compatibility_date": "2025-08-03",
+  "main": "./src/index.tsx"
 }
