feat: enhance AGENTS.md with build and development instructions, and update package.json with new scripts for development, build, and deployment

--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "rekishi",
   "private": true,
   "workspaces": ["apps/*", "packages/*"],
+  "scripts": {
+    "dev": "bun run --filter '*' dev",
+    "build": "bun run --filter '*' build",
+    "deploy": "bun run --filter '*' deploy"
+  },
   "devDependencies": {
     "typescript": "^5.7.2"
   }
