--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "deploy": "bun run --filter '*' deploy"
   },
   "devDependencies": {
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "vite": "^7.1.7"
   }
 }
