chore: update AGENTS.md to reflect new tech stack with React and TanStack, enhance project structure, and add typecheck scripts in package.json for API and web applications

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,14 +6,14 @@
     "build": "vite build",
     "preview": "$npm_execpath run build && vite preview",
     "deploy": "$npm_execpath run build && wrangler deploy",
-    "cf-typegen": "wrangler types --env-interface CloudflareBindings"
+    "cf-typegen": "wrangler types --env-interface CloudflareBindings",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "hono": "^4.11.9"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.2.3",
-    "vite": "^6.3.5",
     "vite-ssr-components": "^0.5.2",
     "wrangler": "^4.17.0"
   }
